sandbox-codebase/objects/mone__Mailchimp_Campaign__c/mone__Mailchimp_Campaign__c.object-meta.xml
<CustomObject>
    <description>Campaigns are how you send emails to your Mailchimp list. Use the Campaigns API calls to manage campaigns in your Mailchimp account.</description>
    <label>Mailchimp Campaign</label>
    <nameField>
        <label>Mailchimp Campaign</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mailchimp Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>