sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Archive_Url__c.field-meta.xml
<CustomField>
    <fullName>mone__Archive_Url__c</fullName>
    <label>Archive Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>