sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Content_Type__c.field-meta.xml
<CustomField>
    <fullName>mone__Content_Type__c</fullName>
    <label>Content Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>