sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Create_Time__c.field-meta.xml
<CustomField>
    <fullName>mone__Create_Time__c</fullName>
    <label>Create Time</label>
    <type>DateTime</type>
</CustomField>