sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Delivery_Status_Enabled__c.field-meta.xml
<CustomField>
    <fullName>mone__Delivery_Status_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Status Enabled</label>
    <type>Checkbox</type>
</CustomField>