sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Emails_Sent__c.field-meta.xml
<CustomField>
    <fullName>mone__Emails_Sent__c</fullName>
    <label>Emails Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>