sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Job_Id__c.field-meta.xml
<CustomField>
    <fullName>mone__Job_Id__c</fullName>
    <description>Holds the Job Id for the Campaigns Batch.</description>
    <inlineHelpText>Internal Use.</inlineHelpText>
    <label>Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>