sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Last_OpenClick_Since__c.field-meta.xml
<CustomField>
    <fullName>mone__Last_OpenClick_Since__c</fullName>
    <label>Last Open/Click Since</label>
    <length>40</length>
    <type>Text</type>
</CustomField>