sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Last_Sync_Activity__c.field-meta.xml
<CustomField>
    <fullName>mone__Last_Sync_Activity__c</fullName>
    <description>Stores the data/time for the last time we synced opens and clicks.</description>
    <inlineHelpText>Internal use.</inlineHelpText>
    <label>Last Sync Activity</label>
    <type>DateTime</type>
</CustomField>