sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Last_Sync_Campaign__c.field-meta.xml
<CustomField>
    <fullName>mone__Last_Sync_Campaign__c</fullName>
    <inlineHelpText>This is the last time this Mailchimp Campaign record was synced to Salesforce.</inlineHelpText>
    <label>Last Sync Campaign</label>
    <type>DateTime</type>
</CustomField>