sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Last_Unsub_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>mone__Last_Unsub_Page_Size__c</fullName>
    <label>Last Unsubscribed Page Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>