sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__List_Id__c.field-meta.xml
<CustomField>
    <fullName>mone__List_Id__c</fullName>
    <label>List Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>