sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Mailchimp_List__c.field-meta.xml
<CustomField>
    <fullName>mone__Mailchimp_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Mailchimp List/Audience.</inlineHelpText>
    <label>Mailchimp List</label>
    <referenceTo>mone__Mailchimp_List__c</referenceTo>
    <relationshipLabel>Mailchimp Campaigns</relationshipLabel>
    <relationshipName>Mailchimp_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>