sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Needs_Block_Refresh__c.field-meta.xml
<CustomField>
    <fullName>mone__Needs_Block_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Block Refresh</label>
    <type>Checkbox</type>
</CustomField>