sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Recipient_Count__c.field-meta.xml
<CustomField>
    <fullName>mone__Recipient_Count__c</fullName>
    <label>Recipient Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>