sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Report_Summary_Click_Rate__c.field-meta.xml
<CustomField>
    <fullName>mone__Report_Summary_Click_Rate__c</fullName>
    <label>Click Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>