sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Report_Summary_Opens__c.field-meta.xml
<CustomField>
    <fullName>mone__Report_Summary_Opens__c</fullName>
    <label>Opens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>