sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Report_Summary_Total_Spent__c.field-meta.xml
<CustomField>
    <fullName>mone__Report_Summary_Total_Spent__c</fullName>
    <label>Total Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>