sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Resendable__c.field-meta.xml
<CustomField>
    <fullName>mone__Resendable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resendable</label>
    <type>Checkbox</type>
</CustomField>