sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Salesforce_Campaign__c.field-meta.xml
<CustomField>
    <fullName>mone__Salesforce_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the related Salesforce Campaign.</inlineHelpText>
    <label>Salesforce Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Mailchimp Campaigns</relationshipLabel>
    <relationshipName>Mailchimp_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>