sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Segment_Text__c.field-meta.xml
<CustomField>
    <fullName>mone__Segment_Text__c</fullName>
    <inlineHelpText>HTML representation of the segment rules.</inlineHelpText>
    <label>Segment Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>