sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Send_Time__c.field-meta.xml
<CustomField>
    <fullName>mone__Send_Time__c</fullName>
    <label>Send Time</label>
    <type>DateTime</type>
</CustomField>