sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Settings_Auto_Footer__c.field-meta.xml
<CustomField>
    <fullName>mone__Settings_Auto_Footer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Settings Auto Footer</label>
    <type>Checkbox</type>
</CustomField>