sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Settings_Drag_And_Drop__c.field-meta.xml
<CustomField>
    <fullName>mone__Settings_Drag_And_Drop__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether the template uses the drag and drop editor.</inlineHelpText>
    <label>Settings Drag And Drop</label>
    <type>Checkbox</type>
</CustomField>