sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Settings_Fb_Comments__c.field-meta.xml
<CustomField>
    <fullName>mone__Settings_Fb_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Settings Fb Comments</label>
    <type>Checkbox</type>
</CustomField>