sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Settings_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>mone__Settings_Folder_Id__c</fullName>
    <label>Settings Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>