sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Settings_Inline_Css__c.field-meta.xml
<CustomField>
    <fullName>mone__Settings_Inline_Css__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Settings Inline Css</label>
    <type>Checkbox</type>
</CustomField>