sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Settings_Preview_Text__c.field-meta.xml
<CustomField>
    <fullName>mone__Settings_Preview_Text__c</fullName>
    <label>Settings Preview Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>