sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Settings_Reply_To__c.field-meta.xml
<CustomField>
    <fullName>mone__Settings_Reply_To__c</fullName>
    <label>Settings Reply To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>