sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Settings_Subject_Line__c.field-meta.xml
<CustomField>
    <fullName>mone__Settings_Subject_Line__c</fullName>
    <label>Settings Subject Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>