sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Settings_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>mone__Settings_Template_Id__c</fullName>
    <label>Settings Template Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>