sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Settings_Timewarp__c.field-meta.xml
<CustomField>
    <fullName>mone__Settings_Timewarp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Settings Timewarp</label>
    <type>Checkbox</type>
</CustomField>