sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Settings_Title__c.field-meta.xml
<CustomField>
    <fullName>mone__Settings_Title__c</fullName>
    <label>Settings Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>