sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Settings_To_Name__c.field-meta.xml
<CustomField>
    <fullName>mone__Settings_To_Name__c</fullName>
    <label>Settings To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>