sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Settings_Use_Conversation__c.field-meta.xml
<CustomField>
    <fullName>mone__Settings_Use_Conversation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Settings Use Conversation</label>
    <type>Checkbox</type>
</CustomField>