sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__status__c.field-meta.xml
<CustomField>
    <fullName>mone__status__c</fullName>
    <label>status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>