sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Tracking_Clicktale__c.field-meta.xml
<CustomField>
    <fullName>mone__Tracking_Clicktale__c</fullName>
    <inlineHelpText>The custom slug for ClickTale tracking (max of 50 bytes).</inlineHelpText>
    <label>Tracking Clicktale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>