sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Tracking_Ecomm360__c.field-meta.xml
<CustomField>
    <fullName>mone__Tracking_Ecomm360__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether to enable e-commerce tracking.</inlineHelpText>
    <label>Tracking Ecomm360</label>
    <type>Checkbox</type>
</CustomField>