sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Tracking_Goal_Tracking__c.field-meta.xml
<CustomField>
    <fullName>mone__Tracking_Goal_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tracking Goal Tracking</label>
    <type>Checkbox</type>
</CustomField>