sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Tracking_Google_Analytics__c.field-meta.xml
<CustomField>
    <fullName>mone__Tracking_Google_Analytics__c</fullName>
    <inlineHelpText>The custom slug for Google Analytics tracking (max of 50 bytes).</inlineHelpText>
    <label>Tracking Google Analytics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>