sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Tracking_Opens__c.field-meta.xml
<CustomField>
    <fullName>mone__Tracking_Opens__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether to track opens. Defaults to true. Cannot be set to false for variate campaigns.</inlineHelpText>
    <label>Tracking Opens</label>
    <type>Checkbox</type>
</CustomField>