sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__Tracking_Text_Clicks__c.field-meta.xml
<CustomField>
    <fullName>mone__Tracking_Text_Clicks__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether to track clicks in the plain-text version of the campaign. Defaults to true. Cannot be set to false for variate campaigns.</inlineHelpText>
    <label>Tracking Text Clicks</label>
    <type>Checkbox</type>
</CustomField>