sandbox-codebase/objects/mone__Mailchimp_Campaign__c/fields/mone__type__c.field-meta.xml
<CustomField>
    <fullName>mone__type__c</fullName>
    <label>type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>