sandbox-codebase/objects/mone__Mailchimp_Campaign__c/listViews/mone__All.listView-meta.xml
<ListView>
    <fullName>mone__All</fullName>
    <columns>NAME</columns>
    <columns>mone__Campaign_Id__c</columns>
    <columns>mone__Web_Id__c</columns>
    <columns>mone__type__c</columns>
    <columns>mone__Create_Time__c</columns>
    <columns>mone__Archive_Url__c</columns>
    <columns>mone__Long_Archive_Url__c</columns>
    <columns>mone__status__c</columns>
    <columns>mone__Emails_Sent__c</columns>
    <columns>mone__Send_Time__c</columns>
    <columns>mone__Content_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>